--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,1 +1,5 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+xavier:
+  name: Xavier Smet
+  email: xavier@smet.com
+  password_digest: <%= User.digest('password') %>
