--- a/test/fixtures/relationships.yml
+++ b/test/fixtures/relationships.yml
@@ -1,1 +1,15 @@
-# empty 
+one:
+  follower: xavier
+  followed: lana
+
+two:
+  follower: xavier
+  followed: mallory
+
+three:
+  follower: lana
+  followed: xavier
+
+four:
+  follower: archer
+  followed: xavier
